option('enable_usermode', type: 'boolean', value: false, description:
       'Make the resulting binary runnable without root (requires sudo during build)')
option('enable_tests', type: 'boolean', value: false, description:
       'Make sure automated testing has all prerequisities')
option('enable_virtual_services', type: 'boolean', value: false, description:
       'Build with virtual services functionality')
option('enable_static_underlay_ip', type: 'boolean', value: false, description:
       'Build with generating underlay ipv6 address without randomness')
option('compiler_suggestions', type: 'boolean', value: false, description:
       'Show various compiler suggestions (warnings)')
option('build_dpservice_cli', type: 'boolean', value: false, description:
       'Enable building of dpservice-cli golang gRPC client')
option('enable_underlay_type', type: 'boolean', value: false, description:
       'Generate underlay address with vnf_type field')
